# tether-app

./: .gitignore  ANDROID.md  BRIDGE-TEST-2026-05-05.md  CLAUDE.md  DOGFOOD-2026-05-05.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: claude-design.md
scripts/: android-build.sh  android-env.sh
src/: App.tsx  AppCanvas.tsx  AppShell.tsx  main.ts  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  skills.rs
src-tauri/src/attach/: mod.rs  state.rs
src-tauri/src/wt/: envelope.rs  error.rs  mod.rs  pair.rs  state.rs
src/blocks/: CandidatesBlock.tsx  DagBlock.tsx  Icon.tsx  MediaBlock.tsx  data.ts
src/components/: AttachBridge.reconnect.test.tsx  AttachBridge.test.ts  AttachBridge.tsx  AuthPrompt.test.tsx  AuthPrompt.tsx  ReloadBanner.test.tsx  ReloadBanner.tsx
src/components/desktop/: Desktop.tsx  Msg.tsx  WorkspaceTree.tsx
src/components/errors/: ErrorStates.tsx
src/components/mobile/: MobileMain.tsx  PhoneFrame.tsx
src/components/pair/: PairDesktop.tsx  PairMobile.tsx
src/components/settings/: Settings.tsx
src/store/: index.test.ts  index.ts  loadSkills.test.ts  loadSkills.ts  mock.ts  types.ts
src/styles/: atoms.css  pair.css  tokens.css
src/transport/: attach.ts  client.ts  errors.ts  index.ts  pair.ts  types.ts  wt.test.ts
v0/: README.md
v0/scripts/: android-env.sh
v0/src/: AppShell.tsx  main.tsx
v0/src-tauri/capabilities/: default.json
v0/src-tauri/src/: main.rs
v0/src-tauri/src/wt/: error.rs
v0/src-tauri/tests/: wt_smoke.rs
v0/src/blocks/: FormBlock.tsx  index.tsx
v0/src/components/: AttachBridge.reconnect.test.tsx  AttachBridge.tsx  AuthPrompt.test.tsx  AuthPrompt.tsx  ErrorBoundary.tsx
v0/src/components/desktop/: Desktop.tsx  Msg.tsx  WorkspaceTree.tsx
v0/src/components/errors/: ErrorStates.tsx
v0/src/components/pair/: PairDesktop.test.tsx  PairDesktop.tsx  QRMock.tsx
v0/src/hooks/: useViewport.ts
v0/src/store/: index.ts  loadSkills.ts  mock.ts  timers.ts  types.ts
v0/src/styles/: desktop.css  mobile.css  settings.css
v0/src/transport/: auth.ts  client.ts  envelope.ts  wt-attach.ts  wt.test.ts
